# CSS

./: .gitignore  Benchmark_CSS.ipynb  CSS.ipynb  CSS_opt.ipynb  README  README.md  WORKSPACE  environment.yml  requirements.txt  setup.py
cpp/: BUILD.bazel
cpp/include/: css.hpp
data/: BFI228.csv  CPAI537.csv  stocks_normalized.csv
notebooks/: Development Notebook.ipynb  blackrock_css.ipynb  cauchy_results_df.pickle_robust  gaussian_results_df.pickle  gaussian_results_df.pickle_robust  missing_data.ipynb  model_selection.ipynb  ordinal_results_df.pickle_robust  testing_data_generation_and_null_distribution.ipynb  testing_subset_selection.ipynb
notebooks/.ipynb_checkpoints/: Development Notebook-checkpoint.ipynb  blackrock_css-checkpoint.ipynb  css_vs_pcss-checkpoint.ipynb  missing_data-checkpoint.ipynb  model_selection-checkpoint.ipynb  testing_data_generation_and_null_distribution-checkpoint.ipynb  testing_subset_selection-checkpoint.ipynb
notebooks/notebook_utils/: data_generation.py  missing_data.py  utils.py
notebooks/results/: gaussian_results.csv  non_gaussian_results
old stuff/: cauchy_results_df.pickle  for_kevin  model_selection_old.py  ordinal_results_df.pickle  subset_selection_old.py  test_subset_selection_old.py
pycss/: CSS.py  PCSS.py  model_selection.py  subset_selection.py  utils.py
pycss.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/: BUILD.bazel  README  setup.py
python/pycss/: __init__.py
python/src/: pybind_css.cpp
tests/: test_CSS.py  test_PCSS.py  test_subset_selection.py  test_utils.py
