load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
PACKAGE_VERSION = "0.1"

py_library(
    name = "pycss_lib",
    srcs = glob(["pycss/**/*.py"]),
    data = ["pycss/pycss_core.so"],
    imports = ["."],
    visibility = ["//visibility:public"],
)

pybind_extension(
    name = "pycss/pycss_core",
    srcs = glob([
        "src/**/*cpp",
        "src/**/*hpp",
    ]),
    includes = ["src/"],
    deps = ["//cpp:css"],
    visibility = ["//visibility:public"]
)

genrule(
    name = "pycss_wheel",
    srcs = [
        "pycss/pycss_core.so",
    ] + glob(["**/*py"]),
    outs = ["dist/pycss-{}-py3-none-any.whl".format(PACKAGE_VERSION)],
    cmd_bash = """
    cp $(location pycss/pycss_core.so) python/
    cd python/
    VERSION={0} python3 setup.py bdist_wheel
    cd ..
    cp python/dist/pycss-{0}-py3-none-any.whl $@
    """.format(PACKAGE_VERSION),
)